dm-dist-ii/DIL/dilpar.output
Terminals unused in grammar

    UNKNOWN
    DILSI_FOR


Grammar

    0 $accept: file $end

    1 file: program

    2 program: DILSC_BEG dilinit diloptions fundef dilrefs dildecls DILSC_COD block DILSC_END

    3 diloptions: DILSC_REC diloptions
    4           | DILSC_AWA diloptions
    5           | %empty

    6 dilinit: %empty

    7 dildecls: %empty
    8         | DILSC_VAR decls

    9 decls: SYMBOL ':' type ';' decls
   10      | %empty

   11 dilrefs: DILSC_EXT refs
   12        | %empty

   13 refs: ref refs
   14     | ref

   15 ref: SYMBOL '(' arginit refarglist ')' ';'
   16    | type SYMBOL '(' arginit refarglist ')' ';'

   17 arginit: %empty

   18 refarglist: %empty
   19           | somerefargs

   20 somerefargs: refarg ',' somerefargs
   21            | refarg

   22 refarg: SYMBOL ':' type

   23 fundef: ref
   24       | %empty

   25 type: DILST_UP
   26     | DILST_INT
   27     | DILST_SP
   28     | DILST_SLP
   29     | DILST_EDP

   30 variable: variable '.' field
   31         | ihold SYMBOL iunhold
   32         | DILSE_SELF
   33         | DILSE_ACTI
   34         | DILSE_MEDI
   35         | DILSE_TARG
   36         | DILSE_POWE
   37         | DILSE_CMST
   38         | DILSE_ARGM
   39         | DILSE_HRT
   40         | DILSE_WEAT
   41         | DILSE_THO
   42         | DILSE_TDA
   43         | DILSE_TMD
   44         | DILSE_TYE
   45         | DILSE_RTI

   46 idx: '[' dilexp ']'

   47 field: idx
   48      | DILSF_BIR
   49      | DILSF_PTI
   50      | DILSF_PCF
   51      | DILSF_HOME
   52      | DILSF_MAS
   53      | DILSF_FOL
   54      | DILSF_IDX
   55      | DILSF_ZOI
   56      | DILSF_NMI
   57      | DILSF_TYP
   58      | DILSF_NXT
   59      | DILSF_NMS
   60      | DILSF_NAM
   61      | DILSF_DES
   62      | DILSF_ODES
   63      | DILSF_IDES
   64      | DILSF_TIT
   65      | DILSF_EXT
   66      | DILSF_OUT
   67      | DILSF_INS
   68      | DILSF_GNX
   69      | DILSF_LCN
   70      | DILSF_GPR
   71      | DILSF_LGT
   72      | DILSF_BGT
   73      | DILSF_MIV
   74      | DILSF_ILL
   75      | DILSF_FL
   76      | DILSF_MAN
   77      | DILSF_OFL
   78      | DILSF_MHP
   79      | DILSF_INFO
   80      | DILSF_LSA
   81      | DILSF_MED
   82      | DILSF_MMA
   83      | DILSF_CHP
   84      | DILSF_BWT
   85      | DILSF_WGT
   86      | DILSF_CAP
   87      | DILSF_ALG
   88      | DILSF_SPL idx
   89      | DILSF_FUN
   90      | DILSF_ZON
   91      | DILSF_OTY
   92      | DILSF_VAL idx
   93      | DILSF_EFL
   94      | DILSF_CST
   95      | DILSF_RNT
   96      | DILSF_EQP
   97      | DILSF_ONM idx
   98      | DILSF_XNF idx
   99      | DILSF_TOR idx
  100      | DILSF_RFL
  101      | DILSF_MOV
  102      | DILSF_ABAL
  103      | DILSF_ATOT
  104      | DILSF_SPD
  105      | DILSF_SEX
  106      | DILSF_RCE
  107      | DILSF_ABL idx
  108      | DILSF_EXP
  109      | DILSF_LVL
  110      | DILSF_HGT
  111      | DILSF_POS
  112      | DILSF_ATY
  113      | DILSF_MNA
  114      | DILSF_END
  115      | DILSF_AFF
  116      | DILSF_DRE
  117      | DILSF_FGT
  118      | DILSF_WPN idx
  119      | DILSF_DEF
  120      | DILSF_ACT
  121      | DILSF_TIM
  122      | DILSF_CRM
  123      | DILSF_FLL
  124      | DILSF_THR
  125      | DILSF_DRK
  126      | DILSF_SPT
  127      | DILSF_APT
  128      | DILSF_GLD
  129      | DILSF_QST
  130      | DILSF_SKL idx

  131 scmp: DILTO_SEQ

  132 pcmp: DILTO_PEQ

  133 cmp: DILTO_EQ
  134    | DILTO_NEQ

  135 icmp: DILTO_GT
  136     | DILTO_LE
  137     | DILTO_GEQ
  138     | DILTO_LEQ

  139 dilexp: dilsexp
  140       | dilexp cmp dilsexp
  141       | dilexp icmp dilsexp
  142       | dilsexp pcmp dilsexp
  143       | dilsexp scmp dilsexp

  144 dilsexp: dilterm
  145        | '-' dilterm
  146        | '+' dilterm
  147        | dilsexp '+' dilterm
  148        | dilsexp '-' dilterm
  149        | dilsexp DILSE_LOR dilterm
  150        | dilsexp DILSE_OR dilterm

  151 dilterm: dilfactor
  152        | dilterm '*' dilfactor
  153        | dilterm '/' dilfactor
  154        | dilterm DILSE_LAND dilfactor
  155        | dilterm DILSE_AND dilfactor
  156        | dilterm '%' dilfactor
  157        | dilterm DILSE_IN dilfactor

  158 dilfactor: '(' dilexp ')'
  159          | dilfun
  160          | PNUM
  161          | STRING
  162          | stringlist
  163          | DILSE_NULL
  164          | variable
  165          | DILSE_NOT dilfactor

  166 dilfun: DILSE_ATOI '(' dilexp ')'
  167       | DILSE_DLD '(' dilexp ',' dilexp ')'
  168       | DILSE_DLF '(' dilexp ',' dilexp ')'
  169       | DILSE_LEN '(' dilexp ')'
  170       | DILSE_ITOA '(' dilexp ')'
  171       | DILSI_ACT '(' dilexp ',' dilexp ',' dilexp ',' dilexp ',' dilexp ',' dilexp ')'
  172       | DILSE_RND '(' dilexp ',' dilexp ')'
  173       | DILSE_ISS '(' dilexp ',' dilexp ')'
  174       | DILSE_ISA '(' dilexp ',' dilexp ')'
  175       | DILSE_FNDU '(' dilexp ',' dilexp ',' dilexp ',' dilexp ')'
  176       | DILSE_FNDRU '(' dilexp ',' dilexp ',' dilexp ')'
  177       | DILSE_FNDR '(' dilexp ')'
  178       | DILSE_FNDS '(' dilexp ')'
  179       | DILSE_FNDS '(' dilexp ',' dilexp ',' dilexp ')'
  180       | DILSE_VISI '(' dilexp ',' dilexp ')'
  181       | DILSE_PCK '(' dilexp ',' dilexp ')'
  182       | DILSE_OPPO '(' dilexp ',' dilexp ')'
  183       | DILSE_SPLX '(' dilexp ')'
  184       | DILSE_SPLI '(' dilexp ',' dilexp ',' dilexp ',' dilexp ',' dilexp ',' dilexp ',' dilexp ',' dilexp ')'
  185       | DILSE_MONS '(' dilexp ',' dilexp ')'
  186       | DILSE_PATH '(' dilexp ',' dilexp ')'
  187       | DILSE_CARY '(' dilexp ',' dilexp ',' dilexp ')'
  188       | DILSE_PURS '(' dilexp ',' dilexp ')'
  189       | DILSE_TRMO '(' dilexp ',' dilexp ',' dilexp ')'
  190       | DILSE_LOAD '(' dilexp ')'
  191       | DILSE_ATSP '(' dilexp ',' dilexp ',' dilexp ',' dilexp ',' dilexp ')'
  192       | DILSE_CST '(' dilexp ',' dilexp ',' dilexp ',' dilexp ',' dilexp ')'
  193       | DILSE_FIT '(' dilexp ',' dilexp ',' dilexp ')'
  194       | DILSE_REST '(' dilexp ',' dilexp ')'
  195       | DILSE_OPRO '(' dilexp ',' dilexp ')'
  196       | DILSE_EQPM '(' dilexp ',' dilexp ')'
  197       | DILSE_MEL '(' dilexp ',' dilexp ',' dilexp ',' dilexp ')'
  198       | DILSE_TXF '(' dilexp ')'
  199       | DILSE_AST '(' dilexp ')'
  200       | DILSE_GETW '(' dilexp ')'
  201       | DILSE_GETWS '(' dilexp ')'
  202       | DILSE_CMDS '(' dilexp ')'

  203 stringlist: '{' strings '}'

  204 strings: STRING
  205        | strings ',' STRING

  206 coreexp: dilexp

  207 corevar: variable

  208 ihold: %empty

  209 iunhold: %empty

  210 ahold: %empty

  211 label: SYMBOL

  212 labelskip: label
  213          | DILSE_SKIP

  214 labellist: labelskip ',' labellist
  215          | labelskip

  216 dilproc: ihold proccall
  217        | DILSI_CLI ihold '(' coreexp ')'
  218        | DILSI_STOR ihold '(' coreexp ')'
  219        | DILSI_AMOD ihold '(' coreexp ',' coreexp ')'
  220        | DILSI_FOLO ihold '(' coreexp ',' coreexp ')'
  221        | DILSI_SETF ihold '(' coreexp ',' coreexp ')'
  222        | DILSI_CHAS ihold '(' coreexp ',' coreexp ')'
  223        | DILSI_SBT ihold '(' coreexp ',' coreexp ')'
  224        | DILSI_SWT ihold '(' coreexp ',' coreexp ')'
  225        | DILSI_SET ihold '(' coreexp ',' coreexp ')'
  226        | DILSI_DLC ihold '(' coreexp ',' coreexp ')'
  227        | DILSI_SETE ihold '(' coreexp ',' coreexp ')'
  228        | DILSI_UST ihold '(' coreexp ',' coreexp ')'
  229        | DILSI_ADE ihold '(' coreexp ',' coreexp ',' coreexp ')'
  230        | DILSI_LCRI ihold '(' coreexp ',' coreexp ',' coreexp ')'
  231        | DILSE_CST ihold '(' coreexp ',' coreexp ',' coreexp ',' coreexp ')'
  232        | DILSI_ADL ihold '(' coreexp ',' coreexp ')'
  233        | DILSI_SUE ihold '(' coreexp ',' coreexp ')'
  234        | DILSI_SUL ihold '(' coreexp ',' coreexp ')'
  235        | DILSI_SUA ihold '(' coreexp ',' coreexp ')'
  236        | DILSI_ADA ihold '(' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ')'
  237        | DILSI_DST ihold '(' coreexp ')'
  238        | DILSI_LOG ihold '(' coreexp ')'
  239        | DILSI_PUP ihold '(' coreexp ')'
  240        | DILSI_LNK ihold '(' coreexp ',' coreexp ')'
  241        | DILSI_EXP ihold '(' coreexp ',' coreexp ')'
  242        | DILSI_ACT ihold '(' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ',' coreexp ')'
  243        | DILSI_EXE ihold '(' coreexp ',' coreexp ')'
  244        | DILSI_WIT ihold '(' coreexp ',' coreexp ')'
  245        | DILSI_SND ihold '(' coreexp ')'
  246        | DILSI_SNT ihold '(' coreexp ',' coreexp ')'
  247        | DILSI_SNTA ihold '(' coreexp ',' coreexp ')'
  248        | DILSI_SNTADIL ihold '(' coreexp ',' coreexp ')'
  249        | DILSI_SEC ihold '(' coreexp ',' label ')'
  250        | DILSI_USE ihold '(' coreexp ')'
  251        | DILSI_QUIT ihold
  252        | DILSI_BLK ihold
  253        | DILSI_PRI ihold
  254        | DILSI_NPR ihold
  255        | DILSI_WLK ihold '(' coreexp ')'
  256        | DILSI_EQP ihold '(' coreexp ',' coreexp ')'
  257        | DILSI_UEQ ihold '(' coreexp ')'

  258 pushbrk: %empty

  259 defbrk: %empty

  260 popbrk: %empty

  261 pushcnt: %empty

  262 defcnt: %empty

  263 popcnt: %empty

  264 semicolons: ';'
  265           | ';' semicolons

  266 optsemicolons: %empty
  267              | semicolons

  268 block: '{' dilinstlist '}'

  269 dilinstlist: dilcomposed
  270            | dilcomposed dilinstlist

  271 dilcomposed: '{' dilinstlist '}' optsemicolons
  272            | dilinst semicolons
  273            | dilcomplex

  274 dilcomplex: DILSI_IF ihold '(' coreexp ')' ahold block ihold ahold DILSI_ELS dilcomposed
  275           | DILSI_IF ihold '(' coreexp ')' ahold dilinst optsemicolons ihold ahold DILSI_ELS dilcomposed
  276           | DILSI_IF ihold '(' coreexp ')' ahold dilcomposed

  277 $@1: %empty

  278 $@2: %empty

  279 dilcomplex: DILSI_FOE ihold '(' coreexp ',' pushbrk pushcnt defcnt ihold corevar ahold ')' $@1 dilcomposed $@2 ihold ahold defbrk popbrk popcnt
  280           | DILSI_WHI pushbrk pushcnt defcnt ihold '(' coreexp ')' ahold dilcomposed ihold ahold defbrk popbrk popcnt
  281           | ':' SYMBOL ':' dilcomposed

  282 arglist: %empty
  283        | someargs ',' arglist
  284        | someargs

  285 someargs: coreexp

  286 dilass: ihold corevar DILTO_ASS dilassrgt

  287 proccall: corevar ihold ihold '(' arginit arglist ')'

  288 corefunc: DILSE_INTR ihold '(' coreexp ',' coreexp ',' labelskip ')'
  289         | DILSI_OAC ihold ihold ahold '(' coreexp ',' labelskip ')'

  290 dilassrgt: coreexp
  291          | proccall
  292          | corefunc

  293 dilinst: dilproc
  294        | dilass
  295        | corefunc
  296        | DILSI_RTS ihold
  297        | DILSI_RTS ihold '(' coreexp ')'
  298        | DILSI_ON ihold coreexp ihold ihold DILSI_GOT labellist
  299        | DILSI_GOT ihold label
  300        | DILSI_BRK ihold ahold
  301        | DILSI_CNT ihold ahold


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 156
    '(' (40) 15 16 158 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 255 256 257 274 275 276 279 280 287 288 289 297
    ')' (41) 15 16 158 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 255 256 257 274 275 276 279 280 287 288 289 297
    '*' (42) 152
    '+' (43) 146 147
    ',' (44) 20 167 168 171 172 173 174 175 176 179 180 181 182 184 185 186 187 188 189 191 192 193 194 195 196 197 205 214 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 240 241 242 243 244 246 247 248 249 256 279 283 288 289
    '-' (45) 145 148
    '.' (46) 30
    '/' (47) 153
    ':' (58) 9 22 281
    ';' (59) 9 15 16 264 265
    '[' (91) 46
    ']' (93) 46
    '{' (123) 203 268 271
    '}' (125) 203 268 271
    error (256)
    UNKNOWN (258)
    STRING <str> (259) 161 204 205
    SYMBOL <sym> (260) 9 15 16 22 31 211 281
    PNUM <num> (261) 160
    DILSC_VAR (262) 8
    DILSC_BEG (263) 2
    DILSC_COD (264) 2
    DILSC_END (265) 2
    DILSC_EXT (266) 11
    DILSC_REC (267) 3
    DILSC_AWA (268) 4
    DILSE_ATOI (269) 166
    DILSE_RND (270) 172
    DILSE_FNDU (271) 175
    DILSE_FNDRU (272) 176
    DILSE_FNDR (273) 177
    DILSE_LOAD (274) 190
    DILSE_GETW (275) 200
    DILSE_ITOA (276) 170
    DILSE_ISS (277) 173
    DILSE_IN (278) 157
    DILSE_ISA (279) 174
    DILSE_CMDS (280) 202
    DILSE_FNDS (281) 178 179
    DILSE_GETWS (282) 201
    DILSE_LEN (283) 169
    DILSE_PURS (284) 188
    DILSE_TRMO (285) 189
    DILSE_DLD (286) 167
    DILSE_DLF (287) 168
    DILSE_LAND (288) 154
    DILSE_LOR (289) 149
    DILSE_VISI (290) 180
    DILSE_OPPO (291) 182
    DILSE_RTI (292) 45
    DILSE_PCK (293) 181
    DILSE_AND (294) 155
    DILSE_OR (295) 150
    DILSE_NOT (296) 165
    DILTO_EQ (297) 133
    DILTO_NEQ (298) 134
    DILTO_PEQ (299) 132
    DILTO_SEQ (300) 131
    DILTO_LEQ (301) 138
    DILTO_GEQ (302) 137
    DILTO_GT (303) 135
    DILTO_LE (304) 136
    DILTO_ASS (305) 286
    DILSE_NULL (306) 163
    DILSE_SELF (307) 32
    DILSE_ACTI (308) 33
    DILSE_ARGM (309) 38
    DILSE_HRT (310) 39
    DILSE_CMST (311) 37
    DILSE_TDA (312) 42
    DILSE_THO (313) 41
    DILSE_TMD (314) 43
    DILSE_TYE (315) 44
    DILSE_SKIP (316) 213
    DILSE_WEAT (317) 40
    DILSE_MEDI (318) 34
    DILSE_TARG (319) 35
    DILSE_POWE (320) 36
    DILSE_CST (321) 192 231
    DILSE_MEL (322) 197
    DILSE_EQPM (323) 196
    DILSE_OPRO (324) 195
    DILSE_REST (325) 194
    DILSE_FIT (326) 193
    DILSE_CARY (327) 187
    DILSE_PATH (328) 186
    DILSE_MONS (329) 185
    DILSE_SPLX (330) 183
    DILSE_SPLI (331) 184
    DILSE_TXF (332) 198
    DILSE_AST (333) 199
    DILSI_LNK (334) 240
    DILSI_EXP (335) 241
    DILSI_SET (336) 225
    DILSI_UST (337) 228
    DILSI_ADE (338) 229
    DILSI_SUE (339) 233
    DILSI_DST (340) 237
    DILSI_ADL (341) 232
    DILSI_SUL (342) 234
    DILSI_SND (343) 245
    DILSI_SNT (344) 246
    DILSI_SEC (345) 249
    DILSI_USE (346) 250
    DILSI_ADA (347) 236
    DILSI_SETF (348) 221
    DILSI_CHAS (349) 222
    DILSI_SUA (350) 235
    DILSI_EQP (351) 256
    DILSI_UEQ (352) 257
    DILSI_OAC (353) 289
    DILSI_STOR (354) 218
    DILSI_SETE (355) 227
    DILSI_QUIT (356) 251
    DILSI_LOG (357) 238
    DILSI_SNTA (358) 247
    DILSI_SNTADIL (359) 248
    DILSI_DLC (360) 226
    DILSE_INTR (361) 288
    DILSI_CLI (362) 217
    DILSI_SWT (363) 224
    DILSI_SBT (364) 223
    DILSE_ATSP (365) 191
    DILSI_FOLO (366) 220
    DILSI_LCRI (367) 230
    DILSI_WHI (368) 280
    DILSI_IF (369) 274 275 276
    DILSI_WLK (370) 255
    DILSI_EXE (371) 243
    DILSI_WIT (372) 244
    DILSI_ACT (373) 171 242
    DILSI_ELS (374) 274 275
    DILSI_GOT (375) 298 299
    DILSI_PRI (376) 253
    DILSI_NPR (377) 254
    DILSI_BLK (378) 252
    DILSI_CNT (379) 301
    DILSI_PUP (380) 239
    DILSI_FOR (381)
    DILSI_FOE (382) 279
    DILSI_BRK (383) 300
    DILSI_RTS (384) 296 297
    DILSI_ON (385) 298
    DILSI_AMOD (386) 219
    DILSF_ZOI (387) 55
    DILSF_NMI (388) 56
    DILSF_TYP (389) 57
    DILSF_NXT (390) 58
    DILSF_NMS (391) 59
    DILSF_NAM (392) 60
    DILSF_IDX (393) 54
    DILSF_TIT (394) 64
    DILSF_EXT (395) 65
    DILSF_OUT (396) 66
    DILSF_INS (397) 67
    DILSF_GNX (398) 68
    DILSF_SPD (399) 104
    DILSF_GPR (400) 70
    DILSF_LGT (401) 71
    DILSF_BGT (402) 72
    DILSF_MIV (403) 73
    DILSF_ILL (404) 74
    DILSF_FL (405) 75
    DILSF_OFL (406) 77
    DILSF_MHP (407) 78
    DILSF_CHP (408) 83
    DILSF_BWT (409) 84
    DILSF_WGT (410) 85
    DILSF_CAP (411) 86
    DILSF_ALG (412) 87
    DILSF_SPL (413) 88
    DILSF_FUN (414) 89
    DILSF_ZON (415) 90
    DILSF_MAS (416) 52
    DILSF_FOL (417) 53
    DILSF_OTY (418) 91
    DILSF_VAL (419) 92
    DILSF_EFL (420) 93
    DILSF_CST (421) 94
    DILSF_RNT (422) 95
    DILSF_EQP (423) 96
    DILSF_ONM (424) 97
    DILSF_XNF (425) 98
    DILSF_TOR (426) 99
    DILSF_RFL (427) 100
    DILSF_MOV (428) 101
    DILSF_ACT (429) 120
    DILSF_SEX (430) 105
    DILSF_RCE (431) 106
    DILSF_ABL (432) 107
    DILSF_EXP (433) 108
    DILSF_LVL (434) 109
    DILSF_HGT (435) 110
    DILSF_POS (436) 111
    DILSF_ATY (437) 112
    DILSF_MNA (438) 113
    DILSF_END (439) 114
    DILSF_WPN (440) 118
    DILSF_MAN (441) 76
    DILSF_AFF (442) 115
    DILSF_DRE (443) 116
    DILSF_FGT (444) 117
    DILSF_DEF (445) 119
    DILSF_TIM (446) 121
    DILSF_CRM (447) 122
    DILSF_FLL (448) 123
    DILSF_THR (449) 124
    DILSF_DRK (450) 125
    DILSF_SPT (451) 126
    DILSF_APT (452) 127
    DILSF_GLD (453) 128
    DILSF_QST (454) 129
    DILSF_SKL (455) 130
    DILSF_BIR (456) 48
    DILSF_PTI (457) 49
    DILSF_PCF (458) 50
    DILSF_HOME (459) 51
    DILSF_ODES (460) 62
    DILSF_IDES (461) 63
    DILSF_DES (462) 61
    DILSF_LCN (463) 69
    DILSF_ABAL (464) 102
    DILSF_ATOT (465) 103
    DILSF_MMA (466) 82
    DILSF_LSA (467) 80
    DILSF_INFO (468) 79
    DILSF_MED (469) 81
    DILST_UP (470) 25
    DILST_INT (471) 26
    DILST_SP (472) 27
    DILST_SLP (473) 28
    DILST_EDP (474) 29
    UMINUS (475)
    UPLUS (476)


Nonterminals, with rules where they appear

    $accept (237)
        on left: 0
    file (238)
        on left: 1
        on right: 0
    program (239)
        on left: 2
        on right: 1
    diloptions (240)
        on left: 3 4 5
        on right: 2 3 4
    dilinit (241)
        on left: 6
        on right: 2
    dildecls (242)
        on left: 7 8
        on right: 2
    decls (243)
        on left: 9 10
        on right: 8 9
    dilrefs (244)
        on left: 11 12
        on right: 2
    refs (245)
        on left: 13 14
        on right: 11 13
    ref (246)
        on left: 15 16
        on right: 13 14 23
    arginit (247)
        on left: 17
        on right: 15 16 287
    refarglist (248)
        on left: 18 19
        on right: 15 16
    somerefargs (249)
        on left: 20 21
        on right: 19 20
    refarg (250)
        on left: 22
        on right: 20 21
    fundef (251)
        on left: 23 24
        on right: 2
    type <num> (252)
        on left: 25 26 27 28 29
        on right: 9 16 22
    variable <exp> (253)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 30 164 207
    idx <exp> (254)
        on left: 46
        on right: 47 88 92 97 98 99 107 118 130
    field <exp> (255)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130
        on right: 30
    scmp <num> (256)
        on left: 131
        on right: 143
    pcmp <num> (257)
        on left: 132
        on right: 142
    cmp <num> (258)
        on left: 133 134
        on right: 140
    icmp <num> (259)
        on left: 135 136 137 138
        on right: 141
    dilexp <exp> (260)
        on left: 139 140 141 142 143
        on right: 46 140 141 158 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 206
    dilsexp <exp> (261)
        on left: 144 145 146 147 148 149 150
        on right: 139 140 141 142 143 147 148 149 150
    dilterm <exp> (262)
        on left: 151 152 153 154 155 156 157
        on right: 144 145 146 147 148 149 150 152 153 154 155 156 157
    dilfactor <exp> (263)
        on left: 158 159 160 161 162 163 164 165
        on right: 151 152 153 154 155 156 157 165
    dilfun <exp> (264)
        on left: 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202
        on right: 159
    stringlist <str_list> (265)
        on left: 203
        on right: 162
    strings <str_list> (266)
        on left: 204 205
        on right: 203 205
    coreexp <ins> (267)
        on left: 206
        on right: 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 255 256 257 274 275 276 279 280 285 288 289 290 297 298
    corevar <ins> (268)
        on left: 207
        on right: 279 286 287
    ihold <num> (269)
        on left: 208
        on right: 31 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 257 274 275 276 279 280 286 287 288 289 296 297 298 299 300 301
    iunhold <num> (270)
        on left: 209
        on right: 31
    ahold <num> (271)
        on left: 210
        on right: 274 275 276 279 280 289 300 301
    label <ins> (272)
        on left: 211
        on right: 212 249 299
    labelskip <ins> (273)
        on left: 212 213
        on right: 214 215 288 289
    labellist <ins> (274)
        on left: 214 215
        on right: 214 298
    dilproc <ins> (275)
        on left: 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 257
        on right: 293
    pushbrk (276)
        on left: 258
        on right: 279 280
    defbrk (277)
        on left: 259
        on right: 279 280
    popbrk (278)
        on left: 260
        on right: 279 280
    pushcnt (279)
        on left: 261
        on right: 279 280
    defcnt (280)
        on left: 262
        on right: 279 280
    popcnt (281)
        on left: 263
        on right: 279 280
    semicolons (282)
        on left: 264 265
        on right: 265 267 272
    optsemicolons (283)
        on left: 266 267
        on right: 271 275
    block <ins> (284)
        on left: 268
        on right: 2 274
    dilinstlist <ins> (285)
        on left: 269 270
        on right: 268 270 271
    dilcomposed <ins> (286)
        on left: 271 272 273
        on right: 269 270 274 275 276 279 280 281
    dilcomplex <ins> (287)
        on left: 274 275 276 279 280 281
        on right: 273
    $@1 (288)
        on left: 277
        on right: 279
    $@2 (289)
        on left: 278
        on right: 279
    arglist (290)
        on left: 282 283 284
        on right: 283 287
    someargs (291)
        on left: 285
        on right: 283 284
    dilass <ins> (292)
        on left: 286
        on right: 294
    proccall <ins> (293)
        on left: 287
        on right: 216 291
    corefunc <ins> (294)
        on left: 288 289
        on right: 292 295
    dilassrgt <ins> (295)
        on left: 290 291 292
        on right: 286
    dilinst <ins> (296)
        on left: 293 294 295 296 297 298 299 300 301
        on right: 272 275


State 0

    0 $accept: • file $end

    DILSC_BEG  shift, and go to state 1

    file     go to state 2
    program  go to state 3


State 1

    2 program: DILSC_BEG • dilinit diloptions fundef dilrefs dildecls DILSC_COD block DILSC_END

    $default  reduce using rule 6 (dilinit)

    dilinit  go to state 4


State 2

    0 $accept: file • $end

    $end  shift, and go to state 5


State 3

    1 file: program •

    $default  reduce using rule 1 (file)


State 4

    2 program: DILSC_BEG dilinit • diloptions fundef dilrefs dildecls DILSC_COD block DILSC_END

    DILSC_REC  shift, and go to state 6
    DILSC_AWA  shift, and go to state 7

    $default  reduce using rule 5 (diloptions)

    diloptions  go to state 8


State 5

    0 $accept: file $end •

    $default  accept


State 6

    3 diloptions: DILSC_REC • diloptions

    DILSC_REC  shift, and go to state 6
    DILSC_AWA  shift, and go to state 7

    $default  reduce using rule 5 (diloptions)

    diloptions  go to state 9


State 7

    4 diloptions: DILSC_AWA • diloptions

    DILSC_REC  shift, and go to state 6
    DILSC_AWA  shift, and go to state 7

    $default  reduce using rule 5 (diloptions)

    diloptions  go to state 10


State 8

    2 program: DILSC_BEG dilinit diloptions • fundef dilrefs dildecls DILSC_COD block DILSC_END

    SYMBOL     shift, and go to state 11
    DILST_UP   shift, and go to state 12
    DILST_INT  shift, and go to state 13
    DILST_SP   shift, and go to state 14
    DILST_SLP  shift, and go to state 15
    DILST_EDP  shift, and go to state 16

    $default  reduce using rule 24 (fundef)

    ref     go to state 17
    fundef  go to state 18
    type    go to state 19


State 9

    3 diloptions: DILSC_REC diloptions •

    $default  reduce using rule 3 (diloptions)


State 10

    4 diloptions: DILSC_AWA diloptions •

    $default  reduce using rule 4 (diloptions)


State 11

   15 ref: SYMBOL • '(' arginit refarglist ')' ';'

    '('  shift, and go to state 20


State 12

   25 type: DILST_UP •

    $default  reduce using rule 25 (type)


State 13

   26 type: DILST_INT •

    $default  reduce using rule 26 (type)


State 14

   27 type: DILST_SP •

    $default  reduce using rule 27 (type)


State 15

   28 type: DILST_SLP •

    $default  reduce using rule 28 (type)


State 16

   29 type: DILST_EDP •

    $default  reduce using rule 29 (type)


State 17

   23 fundef: ref •

    $default  reduce using rule 23 (fundef)


State 18

    2 program: DILSC_BEG dilinit diloptions fundef • dilrefs dildecls DILSC_COD block DILSC_END

    DILSC_EXT  shift, and go to state 21

    $default  reduce using rule 12 (dilrefs)

    dilrefs  go to state 22


State 19

   16 ref: type • SYMBOL '(' arginit refarglist ')' ';'

    SYMBOL  shift, and go to state 23


State 20

   15 ref: SYMBOL '(' • arginit refarglist ')' ';'

    $default  reduce using rule 17 (arginit)

    arginit  go to state 24


State 21

   11 dilrefs: DILSC_EXT • refs

    SYMBOL     shift, and go to state 11
    DILST_UP   shift, and go to state 12
    DILST_INT  shift, and go to state 13
    DILST_SP   shift, and go to state 14
    DILST_SLP  shift, and go to state 15
    DILST_EDP  shift, and go to state 16

    refs  go to state 25
    ref   go to state 26
    type  go to state 19


State 22

    2 program: DILSC_BEG dilinit diloptions fundef dilrefs • dildecls DILSC_COD block DILSC_END

    DILSC_VAR  shift, and go to state 27

    $default  reduce using rule 7 (dildecls)

    dildecls  go to state 28


State 23

   16 ref: type SYMBOL • '(' arginit refarglist ')' ';'

    '('  shift, and go to state 29


State 24

   15 ref: SYMBOL '(' arginit • refarglist ')' ';'

    SYMBOL  shift, and go to state 30

    $default  reduce using rule 18 (refarglist)

    refarglist   go to state 31
    somerefargs  go to state 32
    refarg       go to state 33


State 25

   11 dilrefs: DILSC_EXT refs •

    $default  reduce using rule 11 (dilrefs)


State 26

   13 refs: ref • refs
   14     | ref •

    SYMBOL     shift, and go to state 11
    DILST_UP   shift, and go to state 12
    DILST_INT  shift, and go to state 13
    DILST_SP   shift, and go to state 14
    DILST_SLP  shift, and go to state 15
    DILST_EDP  shift, and go to state 16

    $default  reduce using rule 14 (refs)

    refs  go to state 34
    ref   go to state 26
    type  go to state 19


State 27

    8 dildecls: DILSC_VAR • decls

    SYMBOL  shift, and go to state 35

    $default  reduce using rule 10 (decls)

    decls  go to state 36


State 28

    2 program: DILSC_BEG dilinit diloptions fundef dilrefs dildecls • DILSC_COD block DILSC_END

    DILSC_COD  shift, and go to state 37


State 29

   16 ref: type SYMBOL '(' • arginit refarglist ')' ';'

    $default  reduce using rule 17 (arginit)

    arginit  go to state 38


State 30

   22 refarg: SYMBOL • ':' type

    ':'  shift, and go to state 39


State 31

   15 ref: SYMBOL '(' arginit refarglist • ')' ';'

    ')'  shift, and go to state 40


State 32

   19 refarglist: somerefargs •

    $default  reduce using rule 19 (refarglist)


State 33
